<resources>

    <string name="app_name">ThreadedDownloadActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_threaded_download">ThreadedDownload</string>
    <string name="url_label">Enter URL: </string>
    <string name="sync_aidl_button">Run Sync AIDL</string>
    <string name="async_aidl_button">Run Async AIDL</string>
    <string name="reset_button">Reset\nImage</string>
    <string name="default_url">http://boxinasuitcase.com/media/blogs/box/BSOD.jpg</string>

</resources>